# rust-playground

./: Cargo.toml
src/: lib.rs  main.rs
src/structs/: mod.rs  my_struct.rs
src/traits/: add1.rs  mod.rs  printer.rs
