[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Andrew Ni <niandrewdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "rust_playground"
path = "src/lib.rs"

[[bin]]
name = "rust_playground"
path = "src/main.rs"
